--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -2,9 +2,9 @@ name: Laravel
 
 on:
   push:
-    branches: ['*']
+    branches: ['master']
   pull_request:
-    branches: ['*']
+    branches: ['master']
 
 jobs:
   laravel-tests:
