--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
-        "laravellegends/pt-br-validator": "^10.0"
+        "laravellegends/pt-br-validator": "^10.0",
+        "spatie/data-transfer-object": "^3.9"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
